--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.5.0",
     "@types/lodash": "^4.14.202",
     "ag-grid-community": "^31.0.3",
+    "ag-grid-enterprise": "^31.0.3",
     "ag-grid-react": "^31.0.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
